[gd_scene load_steps=7 format=2]

[ext_resource path="res://tower.png" type="Texture" id=1]
[ext_resource path="res://tower_head.png" type="Texture" id=2]
[ext_resource path="res://Tower.gd" type="Script" id=3]
[ext_resource path="res://range.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 56.1333

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.45089, 7.23785 )

[node name="Tower" type="Node2D"]
script = ExtResource( 3 )

[node name="Range" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1.09823, 1.09823 )
texture = ExtResource( 4 )

[node name="Tower" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Tower_Head" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sight" type="Area2D" parent="." groups=[
"Sight",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 1 )

[node name="Placement" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placement"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="Sight" to="." method="_on_Sight_area_entered"]
[connection signal="area_exited" from="Sight" to="." method="_on_Sight_area_exited"]
[connection signal="area_entered" from="Placement" to="." method="_on_Placement_area_entered"]
[connection signal="area_exited" from="Placement" to="." method="_on_Placement_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
